[project]
name = "safe-passage"
version = "1.0.0"
description = "Emergency Liquidity & Exit Planning System"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Safe-Passage Team" }
]
keywords = ["emergency", "travel", "risk-monitoring", "crisis-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
    "qrcode>=7.4.2",
    "pillow>=10.0.0",
    "reportlab>=4.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/safe-passage"
Documentation = "https://github.com/yourusername/safe-passage#readme"
Repository = "https://github.com/yourusername/safe-passage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
